--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+pybind11 (1.8.1-2) unstable; urgency=medium
+
+  * Fixup the source package maintainer and uploaders.
+    - Move myself to list of uploaders.
+    - Set Debian Science as maintainer.
+  * Install the upstream changelog.
+
+ -- Ghislain Antony Vaillant <ghisvail@gmail.com>  Fri, 02 Dec 2016 11:32:07 +0000
+
 pybind11 (1.8.1-1) unstable; urgency=low
 
   * Initial release. (Closes: #844597)
