--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-pybind11 (2.0.1-1) UNRELEASED; urgency=medium
+pybind11 (2.0.1-1) unstable; urgency=medium
 
   * New upstream release
+  * Use missing sphinxdoc:Built-Using substitution
 
- -- Ghislain Antony Vaillant <ghisvail@gmail.com>  Fri, 06 Jan 2017 19:19:20 +0000
+ -- Ghislain Antony Vaillant <ghisvail@gmail.com>  Fri, 06 Jan 2017 19:35:59 +0000
 
 pybind11 (2.0.0-1) unstable; urgency=medium
 
