--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pybind11 (2.0.1-3) unstable; urgency=medium
+
+  * Run autopkgtests for all supported Python versions
+
+ -- Ghislain Antony Vaillant <ghisvail@gmail.com>  Sat, 25 Feb 2017 12:11:08 +0000
+
 pybind11 (2.0.1-2) unstable; urgency=medium
 
   * Fix missing CMake package configuration in -dev package
