--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,19 @@
+pybind11 (2.1.0-1) experimental; urgency=medium
+
+  * Switch from git-dpm to gbp
+  * New upstream version 2.1.0
+  * Refresh the patch queue
+  * Fixup the Vcs-Browser URI
+  * Simplify the rules file
+  * Update the packaging of the documentation
+    - Use the Python 3 version of Sphinx and the RTD theme
+    - Add new dependency on the breathe Sphinx extension
+    - Call the upstream Makefile for the documentation
+    - Install from and clean the docs build directory
+  * Add DEP-8 tests for clang
+
+ -- Ghislain Antony Vaillant <ghisvail@gmail.com>  Sat, 25 Mar 2017 13:35:01 +0000
+
 pybind11 (2.0.1-3) unstable; urgency=medium
 
   * Run autopkgtests for all supported Python versions
