--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+pybind11 (2.0.1-4) unstable; urgency=medium
+
+  * Build the tests with the default Python 3 version.
+    Thanks to Adrian Bunk (Closes: #867551)
+
+ -- Ghislain Antony Vaillant <ghisvail@gmail.com>  Thu, 20 Jul 2017 14:56:01 +0100
+
 pybind11 (2.0.1-3) unstable; urgency=medium
 
   * Run autopkgtests for all supported Python versions
