--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+pybind11 (2.2.2-2) UNRELEASED; urgency=medium
+
+  * Team upload.
+  * Standards-Version: 4.1.4
+
+ -- Drew Parsons <dparsons@debian.org>  Fri, 27 Apr 2018 11:29:10 +0800
+
 pybind11 (2.2.2-1) experimental; urgency=medium
 
   * New upstream version 2.2.2
