--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+pybind11 (2.2.3-1) unstable; urgency=medium
+
+  * Team upload.
+  * New upstream version 2.2.3
+
+ -- Drew Parsons <dparsons@debian.org>  Sat, 05 May 2018 22:36:18 +0800
+
 pybind11 (2.2.2-2) unstable; urgency=medium
 
   * Team upload.
