--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ pybind11 (2.2.4-1) UNRELEASED; urgency=medium
 
   * Team upload.
   * New upstream version.
+  * Standards-Version: 4.2.1
 
  -- Drew Parsons <dparsons@debian.org>  Sat, 22 Sep 2018 10:22:21 +0800
 
