--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-pybind11 (2.2.4-1) UNRELEASED; urgency=medium
+pybind11 (2.2.4-1) unstable; urgency=medium
 
   * Team upload.
   * New upstream version.
@@ -6,7 +6,7 @@ pybind11 (2.2.4-1) UNRELEASED; urgency=medium
   * debian/control: remove ancient-python-version-field
     X-Python-Version, X-Python3-Version
 
- -- Drew Parsons <dparsons@debian.org>  Sat, 22 Sep 2018 10:22:21 +0800
+ -- Drew Parsons <dparsons@debian.org>  Sat, 22 Sep 2018 10:26:31 +0800
 
 pybind11 (2.2.3-1) unstable; urgency=medium
 
