debhelper compatibility level 12
Build-Depends: debhelper-compat (= 12)

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ pybind11 (2.3.0-1exp1) UNRELEASED; urgency=medium
   * Team upload.
   * New upstream release.
   * Standards-Version: 4.3.0
+  * debhelper compatibility level 12
+    Build-Depends: debhelper-compat (= 12)
 
  -- Drew Parsons <dparsons@debian.org>  Thu, 13 Jun 2019 20:58:54 +1000
 
