--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-pybind11 (2.3.0-2) UNRELEASED; urgency=medium
+pybind11 (2.3.0-2) unstable; urgency=medium
 
   * Team upload.
   * Standards-Version: 4.4.0
 
- -- Drew Parsons <dparsons@debian.org>  Fri, 02 Aug 2019 18:38:58 +0800
+ -- Drew Parsons <dparsons@debian.org>  Fri, 02 Aug 2019 18:39:50 +0800
 
 pybind11 (2.3.0-1exp1) experimental; urgency=medium
 
