--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+pybind11 (2.4.3-1) UNRELEASED; urgency=medium
+
+  * Team upload.
+  * New upstream release.
+
+ -- Drew Parsons <dparsons@debian.org>  Sun, 20 Oct 2019 11:57:08 +0800
+
 pybind11 (2.4.2-1) unstable; urgency=medium
 
   * Team upload.
