--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+pybind11 (2.4.3-2) UNRELEASED; urgency=medium
+
+  * Team upload.
+  * drop python-pybind11 (Python2 is deprecated). Closes: #937389.
+
+ -- Drew Parsons <dparsons@debian.org>  Fri, 15 Nov 2019 13:01:59 +0800
+
 pybind11 (2.4.3-1) unstable; urgency=medium
 
   * Team upload.
