--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+pybind11 (2.5.0-1) UNRELEASED; urgency=medium
+
+  * Team upload.
+  * New upstream release.
+
+ -- Drew Parsons <dparsons@debian.org>  Thu, 16 Apr 2020 22:12:45 +0800
+
 pybind11 (2.4.3-2) unstable; urgency=medium
 
   * Team upload.
