--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+pybind11 (2.5.0-2) unstable; urgency=medium
+
+  * Team upload.
+  * upload new upstream version to unstable
+
+ -- Drew Parsons <dparsons@debian.org>  Sun, 19 Apr 2020 10:00:25 +0800
+
 pybind11 (2.5.0-1) experimental; urgency=medium
 
   * Team upload.
