--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+pybind11 (2.6.0-1exp1) UNRELEASED; urgency=medium
+
+  * Team upload.
+  * New upstream release.
+
+ -- Drew Parsons <dparsons@debian.org>  Thu, 29 Oct 2020 01:11:52 +0800
+
 pybind11 (2.5.0-5) unstable; urgency=medium
 
   * Team upload.
