create debian patch skip_sphinxcontrib_doc.patch
removes sphinxcontrib modules rsvgconverter and moderncmakedomain for
doc build, since they are not yet packaged.

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ pybind11 (2.6.0-1exp1) UNRELEASED; urgency=medium
 
   * Team upload.
   * New upstream release.
+  * debian patch skip_sphinxcontrib_doc.patch removes sphinxcontrib
+    modules rsvgconverter and moderncmakedomain for doc build, since
+    they are not yet packaged.
 
  -- Drew Parsons <dparsons@debian.org>  Thu, 29 Oct 2020 01:11:52 +0800
 
