--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ pybind11 (2.6.0-2) UNRELEASED; urgency=medium
   * update debian patch test_cmake_pyversion.patch to process
     PYVERSION to find python before using PYTHON_VERSION.
     Otherwise test_async is skipped. Closes: #973794.
+  * use help2man to generate a manpage for pybind11-config
 
  -- Drew Parsons <dparsons@debian.org>  Fri, 06 Nov 2020 17:17:25 +0800
 
