--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-pybind11 (2.6.0-2) UNRELEASED; urgency=medium
+pybind11 (2.6.0-2) unstable; urgency=medium
 
   * Team upload.
   * update debian patch test_cmake_pyversion.patch to process
@@ -6,7 +6,7 @@ pybind11 (2.6.0-2) UNRELEASED; urgency=medium
     Otherwise test_async is skipped. Closes: #973794.
   * use help2man to generate a manpage for pybind11-config
 
- -- Drew Parsons <dparsons@debian.org>  Fri, 06 Nov 2020 17:17:25 +0800
+ -- Drew Parsons <dparsons@debian.org>  Fri, 06 Nov 2020 18:09:24 +0800
 
 pybind11 (2.6.0-1) unstable; urgency=medium
 
