--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+pybind11 (2.6.1-1) UNRELEASED; urgency=medium
+
+  * Team upload.
+  * New upstream release.
+
+ -- Drew Parsons <dparsons@debian.org>  Thu, 19 Nov 2020 01:25:57 +0800
+
 pybind11 (2.6.0-2) unstable; urgency=medium
 
   * Team upload.
