--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+pybind11 (2.6.2-1) UNRELEASED; urgency=medium
+
+  * Team upload.
+  * New upstream release.
+
+ -- Drew Parsons <dparsons@debian.org>  Sat, 30 Jan 2021 17:05:04 +0100
+
 pybind11 (2.6.1-1) unstable; urgency=medium
 
   * Team upload.
