--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ pybind11 (2.6.2-1) UNRELEASED; urgency=medium
 
   * Team upload.
   * New upstream release.
+    - Build-Depends: cmake (>= 3.18~), ninja-build, python3-wheel
 
  -- Drew Parsons <dparsons@debian.org>  Sat, 30 Jan 2021 17:05:04 +0100
 
