--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-pybind11 (2.6.2-1) UNRELEASED; urgency=medium
+pybind11 (2.6.2-1) unstable; urgency=medium
 
   * Team upload.
   * New upstream release.
@@ -6,7 +6,7 @@ pybind11 (2.6.2-1) UNRELEASED; urgency=medium
   * refresh predownloaded debian/images for privacy protection using
     debian/get_images.sh
 
- -- Drew Parsons <dparsons@debian.org>  Sat, 30 Jan 2021 17:05:04 +0100
+ -- Drew Parsons <dparsons@debian.org>  Sat, 30 Jan 2021 23:55:39 +0100
 
 pybind11 (2.6.1-1) unstable; urgency=medium
 
