--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+pybind11 (2.6.2-1kern1) focal; urgency=medium
+
+  [ Athanaseus Javas Ramaila]
+  * Build for focal
+
+ -- KERN packaging <packaging@kernsuite.info>  Tue, 23 Mar 2021 10:46:43 +0000
+
 pybind11 (2.6.2-1) unstable; urgency=medium
 
   * Team upload.
